--- a/src/main/resources/com/example/xkubson/demoapp/hello-view.fxml
+++ b/src/main/resources/com/example/xkubson/demoapp/hello-view.fxml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.xkubson.demoapp.controllers.MainController">
+<VBox alignment="CENTER" prefHeight="239.0" prefWidth="801.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.xkubson.demoapp.controllers.AppController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-
-    <Label styleClass="text" fx:id="welcomeText"/>
-    <Label styleClass="text" fx:id="debugTest"/>
-    <VBox fx:id="buttonContainer" spacing="5"/>
-    <Button styleClass="button" text="Select File" onAction="#onFileButtonClick"/>
+<!--    <Button styleClass="button" text="Select File" onAction="#onFileButtonClick"/>-->
+    <Label fx:id="debugTest">aaa</Label>
 </VBox>
