--- a/src/main/resources/com/example/xkubson/demoapp/style.css
+++ b/src/main/resources/com/example/xkubson/demoapp/style.css
@@ -1,15 +1,31 @@
 .root {
-    -fx-background-color: 'black';
+    -fx-background-color: '#19191a';
+    -fx-font-family: 'roboto';
 }
 
-.test {
+.error {
     -fx-background-color: 'red';
-    -fx-background-radius: 50px;
-    -fx-border-radius: 50px;
-    -fx-border-width: 5px;
-    -fx-border-color: 'green';
+    -fx-fill: 'yellow';
 }
 
-.text {
-    -fx-fill: 'blue';
+.labelText {
+    -fx-text-fill: 'white';
+    -fx-padding: 10px;
+    -fx-background-color: '#212121'
+}
+
+.button {
+    -fx-background-color: "#008bd2";
+    -fx-text-fill: "#1d1d1b";
+    -fx-font-weight: 700;
+    -fx-border-radius: 45px;
+}
+
+.textContainer {
+    -fx-background-color: '#212121';
+    -fx-padding: 15px;
+}
+
+.scrollPane {
+    -fx-background-color: transparent;
 }
